added a image + lazy loading

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
                 <!-- Project 2 -->
                 <article class="card">
                     <div class="card__image-container">
-                        <img src="project2.jpg" alt="Project 2" class="card__image lazy">
+                        <img src="image.jpg" alt="Project 2"  class="card__image lazy">
                     </div>
                     <div class="card__content">
-                        <h3 class="card__title">Project Title 2</h3>
-                        <p class="card__description">Brief description of Project 2.</p>
+                        <h3 class="card__title">ESP32 Rythym Game</h3>
+                        <p class="card__description">A fun guitar hero-esque game running on a ESP32</p>
                     </div>
                     <div class="card__actions">
                         <a href="#" class="button">View Project</a>
@@ -67,6 +67,6 @@
     </footer>
 
     <!-- If you implement lazy loading for images, you'd include your JavaScript here. Example: -->
-    <!-- <script src="lazy-load.js"></script> -->
+    <script src="lazy-load.js"></script>
 </body>
 </html>
