--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Make sure your title is relevant to you -->
     <title>Arnav Yadavilli - Student, Engineer</title>
     <!-- Ensure 'style.css' is the correct path and contains the CSS I provided -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/base/style.css">
 </head>
 <body class="portfolio-container">
 
@@ -15,7 +15,7 @@
         <p>Product Designer based in Brooklyn, New York</p>
         <nav class="navbar">
             <ul>
-                <li><a href="mailto:your-email@example.com" class="nav-link">Email</a></li>
+                <li><a href="mailto:arnavyadavilli@gmail.com" class="nav-link">Email</a></li>
                 <li><a href="https://www.linkedin.com/in/your-linkedin" class="nav-link">LinkedIn</a></li>
             </ul>
         </nav>
@@ -30,7 +30,7 @@
                 <article class="card">
                     <div class="card__image-container">
                         <!-- Add .lazy if using lazy loading JS, otherwise remove it or ensure your JS handles it -->
-                        <img src="project1.jpg" alt="Project 1" class="card__image lazy">
+                        <img src="project1.jpg" alt="Projaefiahbfkabflaect 1" class="card__image lazy">
                     </div>
                     <div class="card__content">
                         <h3 class="card__title">Project Title 1</h3>
@@ -44,7 +44,7 @@
                 <!-- Project 2 -->
                 <article class="card">
                     <div class="card__image-container">
-                        <img src="image.jpg" alt="Project 2"  class="card__image lazy">
+                        <img src="src/img/realtimergui.jpg" alt="Project 2"  class="card__image lazy">
                     </div>
                     <div class="card__content">
                         <h3 class="card__title">ESP32 Rythym Game</h3>
@@ -56,6 +56,32 @@
                 </article>
 
                 <!-- Add more projects here following the .card structure -->
+                 <!-- Project 3 -->
+                <article class="card">
+                    <div class="card__image-container">
+                        <img src="src/img/realtimergui.jpg" alt="Project 2"  class="card__image lazy">
+                    </div>
+                    <div class="card__content">
+                        <h3 class="card__title">ESP32 Rythym Game</h3>
+                        <p class="card__description">A fun guitar hero-esque game running on a ESP32</p>
+                    </div>
+                    <div class="card__actions">
+                        <a href="#" class="button">View Project</a>
+                    </div>
+                </article>
+                <!-- Project 4 -->
+                <article class="card">
+                    <div class="card__image-container">
+                        <img src="src/img/realtimergui.jpg" alt="Project 2"  class="card__image lazy">
+                    </div>
+                    <div class="card__content">
+                        <h3 class="card__title">ESP32 Rythym Game</h3>
+                        <p class="card__description">A fun guitar hero-esque game running on a ESP32</p>
+                    </div>
+                    <div class="card__actions">
+                        <a href="#" class="button">View Project</a>
+                    </div>
+                </article>
 
             </div>
         </section>
@@ -67,6 +93,6 @@
     </footer>
 
     <!-- If you implement lazy loading for images, you'd include your JavaScript here. Example: -->
-    <script src="lazy-load.js"></script>
+    <script src="src/js/lazy-load.js"></script>
 </body>
 </html>
