wrote up calsol page

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 
     <header class="site-header full-bleed">
         <h1>Arnav Yadavilli</h1>
-        <p>Engineer, making amazing things</p>
+        <p>is an engineer, making amazing things.</p>
          <nav class="navbar">
             <ul>
                 <li><a href="index.html#projects" class="nav-link">Projects</a></li> <!-- Added link to projects section -->
                 <li><a href="index.html#blog" class="nav-link">Blog</a></li> <!-- Link to new blog section -->
                 <li><a href="mailto:arnavyadavilli@gmail.com" class="nav-link">Email</a></li>
-                <li><a href="https://www.linkedin.com/in/your-linkedin" class="nav-link">LinkedIn</a></li>
+                <li><a href="https://www.linkedin.com/in/arnav-yadavilli-535306277" class="nav-link">LinkedIn</a></li>
+                <li><a href="github.com/pranceraz" class="nav-link">Github</a></li>
             </ul>
         </nav>
     </header>
@@ -32,14 +33,14 @@
                 <article class="card">
                     <div class="card__image-container">
                         <!-- Add .lazy if using lazy loading JS, otherwise remove it or ensure your JS handles it -->
-                        <img src="project1.jpg" alt="Projaefiahbfkabflaect 1" class="card__image lazy">
+                        <img src="src/img/Calsol_card.jpg" alt="Projaefiahbfkabflaect 1" class="card__image lazy">
                     </div>
                     <div class="card__content">
-                        <h3 class="card__title">Project Title 1</h3>
-                        <p class="card__description">Brief description of Project 1.</p>
+                        <h3 class="card__title">Calsol</h3>
+                        <p class="card__description">UC Berkeley solar car team</p>
                     </div>
                     <div class="card__actions">
-                        <a href="src/pages/project1-detatil.html" class="button">View Project</a>
+                        <a href="src/pages/project1-detail.html" class="button">View Activity</a>
                     </div>
                 </article>
 
@@ -49,11 +50,11 @@
                         <img src="src/img/realtimergui.jpg" alt="Project 2"  class="card__image lazy">
                     </div>
                     <div class="card__content">
-                        <h3 class="card__title">ESP32 Rythym Game</h3>
+                        <h3 class="card__title">ESP32 Rhythm Game</h3>
                         <p class="card__description">A fun guitar hero-esque game running on a ESP32</p>
                     </div>
                     <div class="card__actions">
-                        <a href="#" class="button">View Project</a>
+                        <a href="src/pages/project2-detail.html" class="button">View Project</a>
                     </div>
                 </article>
 
@@ -61,14 +62,14 @@
                  <!-- Project 3 -->
                 <article class="card">
                     <div class="card__image-container">
-                        <img src="src/img/realtimergui.jpg" alt="Project 2"  class="card__image lazy">
+                        <img src="src/img/water_drone_card.jpg" alt="Project 3"  class="card__image lazy">
                     </div>
                     <div class="card__content">
-                        <h3 class="card__title">ESP32 Rythym Game</h3>
-                        <p class="card__description">A fun guitar hero-esque game running on a ESP32</p>
+                        <h3 class="card__title">Autonomous Ocean Drone</h3>
+                        <p class="card__description">Sail powered STM32 based drone system</p>
                     </div>
                     <div class="card__actions">
-                        <a href="#" class="button">View Project</a>
+                        <a href="src/pages/project3-detail.html" class="button">View Project</a>
                     </div>
                 </article>
                 <!-- Project 4 -->
@@ -81,7 +82,31 @@
                         <p class="card__description">A fun guitar hero-esque game running on a ESP32</p>
                     </div>
                     <div class="card__actions">
-                        <a href="#" class="button">View Project</a>
+                        <a href="src/pages/project4-detail.html" class="button">View Project</a>
+                    </div>
+                </article>
+                <article class="card">
+                    <div class="card__image-container">
+                        <img src="src/img/realtimergui.jpg" alt="Project 2"  class="card__image lazy">
+                    </div>
+                    <div class="card__content">
+                        <h3 class="card__title">AI + ML</h3>
+                        <p class="card__description">AI/ML projects i have worked on</p>
+                    </div>
+                    <div class="card__actions">
+                        <a href="src/pages/project4-detail.html" class="button">View Activity</a>
+                    </div>
+                </article>
+                <article class="card">
+                    <div class="card__image-container">
+                        <img src="src/img/realtimergui.jpg" alt="Project 2"  class="card__image lazy">
+                    </div>
+                    <div class="card__content">
+                        <h3 class="card__title">ESP32 Rythym Game</h3>
+                        <p class="card__description">A fun guitar hero-esque game running on a ESP32</p>
+                    </div>
+                    <div class="card__actions">
+                        <a href="src/pages/project4-detail.html" class="button">View Project</a>
                     </div>
                 </article>
 
