--- a/src/pages/project1-detail.html
+++ b/src/pages/project1-detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Title 1 - Arnav Yadavilli</title>
+    <title> Calsol- Arnav Yadavilli</title>
     <link rel="stylesheet" href="../../css/base/style.css"> <!-- Link to your main stylesheet -->
     <!-- You might want a specific stylesheet for project pages if needed -->
     <!-- <link rel="stylesheet" href="css/project-detail.css"> -->
