Added TafLAB content

--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
                 <!-- Project 2 -->
                 <article class="card">
                     <div class="card__image-container">
-                        <img src="src/img/realtimergui.jpg" alt="Project 2"  class="card__image lazy">
+                        <img src="src/img/AI_icon.avif" alt="Project 2"  class="card__image lazy">
                     </div>
                     <div class="card__content">
-                        <h3 class="card__title">ESP32 Rhythm Game</h3>
-                        <p class="card__description">A fun guitar hero-esque game running on a ESP32</p>
+                        <h3 class="card__title">AI/ML</h3>
+                        <p class="card__description">AI/ML projects i've undertaken</p>
                     </div>
                     <div class="card__actions">
-                        <a href="src/pages/project2-detail.html" class="button">View Project</a>
+                        <a href="src/pages/project2-detail.html" class="button">View Activity</a>
                     </div>
                 </article>
 
@@ -87,11 +87,11 @@
                 </article>
                 <article class="card">
                     <div class="card__image-container">
-                        <img src="src/img/realtimergui.jpg" alt="Project 2"  class="card__image lazy">
+                        <img src="src/img/realtimergui.jpg" alt="Project 5"  class="card__image lazy">
                     </div>
                     <div class="card__content">
-                        <h3 class="card__title">AI + ML</h3>
-                        <p class="card__description">AI/ML projects i have worked on</p>
+                        <h3 class="card__title">Ongoing / Upcoming</h3>
+                        <p class="card__description">Look Forward to this!</p>
                     </div>
                     <div class="card__actions">
                         <a href="src/pages/project4-detail.html" class="button">View Activity</a>
