--- a/src/pages/project1-detail.html
+++ b/src/pages/project1-detail.html
@@ -61,8 +61,10 @@
             <section class="project-gallery">
                 
                 <div class="image-gallery-grid">
-                    <img src="../img/doing_strat.JPG" alt="Screenshot 1 of Project 1">
+                    <img src="../img/grafana_dashboard.png" alt="Screenshot 2 of Project 1">
                     <img src="../img/STAR_POSE.jpg" alt="Screenshot 2 of Project 1">
+                    <img src="../img/grapfanadash2.png" alt="Screenshot 3 of Project 1">
+                    <img src="../img/doing_strat.JPG" alt="Screenshot 4 of Project 1">
                     <!-- Add more images or videos -->
                 </div>
             </section>
