added hero image to TAFLAB Page

--- a/src/pages/project2-detail.html
+++ b/src/pages/project2-detail.html
@@ -28,7 +28,7 @@
             <h2>TAFLab Ocean Drones Project</h2>
             
             <div class="project-hero-image">
-                <img src="../../src/img/taflab_drone.jpg" alt="Autonomous sailboat drone at Berkeley Marina">
+                <img src="../../g" alt="Autonomous sailboat drone at Berkeley Marina">
             </div>
 
             <h3>Overview</h3>
@@ -64,7 +64,7 @@
             <section class="project-gallery">
                 <div class="image-gallery-grid">
                     <img src="../img/berkeley_marina_testing.jpg" alt="Testing autonomous sailboat at Berkeley Marina">
-                    <img src="../img/stm32_firmware_code.png" alt="STM32 firmware development">
+                    <img src="../img/taflab_images/ocean_drone_cover.jpg" alt="STM32 firmware development">
                     <img src="../img/sensor_integration.jpg" alt="Sensor integration and debugging">
                     <img src="../img/team_at_marina.jpg" alt="TAFLab team conducting tests">
                     <!-- Add more images or videos -->
