--- a/src/pages/project3-detail.html
+++ b/src/pages/project3-detail.html
@@ -27,9 +27,14 @@
         <article class="project-content">
             <h2>TAFLab Ocean Drones Project</h2>
             
-            <div class="project-hero-image">
-                <img src="../../src/img/taflab_drone.jpg" alt="Autonomous sailboat drone at Berkeley Marina">
-            </div>
+<div style="width: 100%; height: 400px; overflow: hidden; position: relative;">
+    <img src="../img/water_drone_card.jpg" 
+         alt="Autonomous sailboat drone at Berkeley Marina"
+         style="width: 100%; height: auto; position: absolute; top: 50%; transform: translateY(-50%);">
+</div>
+
+
+
 
             <h3>Overview</h3>
             <section class="project-overview">
@@ -63,7 +68,7 @@
             <h3>Gallery / Screenshots</h3>
             <section class="project-gallery">
                 <div class="image-gallery-grid">
-                    <img src="../img/berkeley_marina_testing.jpg" alt="Testing autonomous sailboat at Berkeley Marina">
+                    <img src="../img/taflab_images/ocean_drone_cover.jpg" alt="Testing autonomous sailboat at Berkeley Marina">
                     <img src="../img/stm32_firmware_code.png" alt="STM32 firmware development">
                     <img src="../img/sensor_integration.jpg" alt="Sensor integration and debugging">
                     <img src="../img/team_at_marina.jpg" alt="TAFLab team conducting tests">
