--- a/src/pages/project3-detail.html
+++ b/src/pages/project3-detail.html
@@ -27,11 +27,22 @@
         <article class="project-content">
             <h2>TAFLab Ocean Drones Project</h2>
             
-<div style="width: 100%; height: 400px; overflow: hidden; position: relative;">
+<div style="width: 100%; 
+            height: 500px; 
+            overflow: hidden; 
+            position: relative;
+            border-radius: 12px;
+            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
+            transform: translateY(-4px);">
     <img src="../img/water_drone_card.jpg" 
          alt="Autonomous sailboat drone at Berkeley Marina"
-         style="width: 100%; height: auto; position: absolute; top: 50%; transform: translateY(-50%);">
+         style="width: 100%; 
+                height: auto; 
+                position: absolute; 
+                top: 50%; 
+                transform: translateY(-50%);">
 </div>
+
 
 
 
