--- a/src/pages/project2-detail.html
+++ b/src/pages/project2-detail.html
@@ -163,7 +163,7 @@
                 <h3>Source Code</h3>
                 <p>
                     <!-- Replace with actual repos as available -->
-                    <a href="https://github.com/arnavyadavilli" class="button" target="_blank" rel="noopener noreferrer">View Repositories</a>
+                    <a href="https://github.com/pranceraz/AI188" class="button" target="_blank" rel="noopener noreferrer">View Repositories</a>
                 </p>
             </section>
         </center>
